# campLinks

./: .gitignore  2025_election_summary.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  LICENSE  Metric-MagMod.md  OLD-scraping-campaign-sites.py  README.md  USAGE.md  add_compliance_column.py  add_detection_columns.py  add_funding_column.py  add_token_length.py  add_tweet_token_length.py  ag_content.csv  analysis_missing_candidates.ipynb  archive_lookup.py  backfill_sample_60.py  bad_aggregator_urls.csv  bad_wikipedia_urls.csv  campaign_search_cache.json  camplinks.db  camplinks.db-shm  camplinks.db-wal  candidate_names_23_to_25.csv  check_and_update_names.py  check_candidate_names.py  clean_x_accounts_round2.py  convert_to_tidy.py  export_missing_x_links.py  find_campaign_urls.py  find_x_accounts.py  fix_bad_urls.py  governor_content.csv  house_races_2024.csv  laws.csv  load_csv_to_db.py  magnitude_analysis.R  magnitude_analysis_RQ1.R  (+25 more)
.claude/: claude.md
camplinks/: __init__.py  __main__.py  archive.py  cache.py  db.py  enrich.py  get_text_content.py  http.py  models.py  pipeline.py  search.py  validate.py  wiki_parsing.py
code/: compute_campaign_magnitude.py
detection/: calculate_magnitudes.ipynb  run-pangram-text.ipynb
external_data_on_candidates/: 2023-state-house-senate-followthemoney.csv  candidate_names_23_to_25.csv  us-senate-and-house-candidates-2025-26.csv
tables/: text-sample-count.csv
tests/: test_archive.py  test_attorney_general.py  test_ballotpedia_governor.py  test_ballotpedia_municipal.py  test_convert.py  test_db.py  test_governor.py  (+8 more)
(+38 files in other folders)
