[project]
name = "camplinks"
version = "0.1.0"
description = "Scrape and enrich US political election data from Wikipedia and Ballotpedia."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Nic Weber"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "lxml>=6.0.2",
    "orjson>=3.11.7",
    "polars>=1.38.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[project.urls]
Repository = "https://github.com/nicweber/campLinks"

[project.scripts]
camplinks = "camplinks.__main__:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20260107",
    "types-tqdm>=4.67.3.20260205",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
